<resources>
    <string name="app_name">Securify</string>

    <string name="button_get_started">Get started</string>

    <!-- TextInputLayout hints -->
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_sms_code">Enter the code</string>
    <string name="hint_pin">PIN</string>
    <string name="hint_reenter_pin">Re-enter PIN</string>
    <string name="hint_name">Name</string>

    <!-- Buttons -->
    <string name="button_continue">Continue</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_verify">Verify</string>
    <string name="button_send_code">Send</string>
    <string name="button_ok">OK</string>

    <!-- TextViews -->
    <string name="enter_your_email">Enter your email</string>
    <string name="create_new_account">Create a new account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="set_up_new_pin">Set up new PIN</string>

    <!-- Required field errors -->
    <string name="error_email_required">Enter email</string>
    <string name="error_first_name_required">Enter first name</string>
    <string name="error_last_name_required">Enter last name</string>
    <string name="error_password_required">Enter password</string>
    <string name="error_phone_required">Enter phone number</string>
    <string name="error_sms_code_required">Enter the code</string>
    <string name="error_conf_password_required">Re-enter password</string>
    <string name="error_pin_required">Enter PIN</string>
    <string name="error_conf_pin_required">Re-enter PIN</string>
    <string name="error_name_required">Enter name</string>

    <!-- Other errors -->
    <string name="error_invalid_email">Invalid email!</string>
    <string name="error_wrong_password">Wrong password!</string>
    <string name="error_existing_email">An account already exists with this email!</string>
    <string name="error_unknown">An unknown error occurred!</string>
    <string name="error_no_internet_connection">No internet connection!</string>
    <string name="error_password_mismatch">The passwords don\'t match!</string>
    <string name="error_weak_password">The password is weak!</string>
    <string name="error_invalid_phone">Phone no. must be of 10 digits.</string>
    <string name="error_invalid_sms_code">Invalid code!</string>
    <string name="error_invalid_pin">The PIN must be of 4 digits!</string>
    <string name="error_wrong_pin">The entered PIN is wrong!</string>
    <string name="error_existing_phone">The phone number already exists!</string>

    <!-- Snackbar actions -->
    <string name="action_retry">Retry</string>

    <!-- Alert Service description -->
    <string name="button_service">Securify is using this service to listen to Volume button clicks to send the alert instantly. If you disable this service, you won\'t be able to do so\n\nNo personal data is collected.</string>
    <string name="code_sent">A code was sent to this phone number.</string>

    <!-- Menu items -->
    <string name="item_log_out">Log out</string>
    <string name="action_delete">Delete</string>

    <!-- Fragments -->
    <string name="fragment_home">Home</string>
    <string name="fragment_alerts">Alerts</string>
    <string name="fragment_volunteers">Volunteers</string>

    <string name="button_send_alert">Send alert</string>

    <string name="add_volunteer">Add volunteer</string>

    <string name="volunteers_limit_message">Only 5 volunteers can be added!</string>

    <string name="action_call">Call</string>
    <string name="action_locate">Locate</string>

    <string name="empty_volunteers_list_message">Start adding volunteers.</string>

    <!-- CAB title -->
    <string name="cab_title">%1$d selected</string>
    <string name="button_resend">Resend</string>
    <string name="button_change_phone">Change phone</string>
    <string name="resend_message">Wait for 30 seconds, then resend the OTP.</string>

    <string name="instant_alert">Instant Alert</string>
    <string name="fragment_permissions">Permissions</string>
    <string name="permissions_header">Alert Service requires the following permissions:</string>
    <string name="permission_accessibility_service">Start accessibility service</string>
    <string name="permission_system_overlay">Display over other apps</string>
    <string name="button_cancel">Cancel</string>
    <string name="activity_permissions">Permissions</string>
    <string name="permissions_request">Please grant permissions!</string>
    <string name="action_grant">Grant</string>
    <string name="request_permissions_message">In order to provide Instant Alert service, we need access to the following permissions: </string>
    <string name="phone">Phone</string>
    <string name="phone_info">To immediately call the victim from the dialog when alert is received.</string>
    <string name="sms">SMS</string>
    <string name="sms_info">To send the alert and display it to volunteers.</string>
    <string name="location">Location</string>
    <string name="location_info">To send the location of victim with alert.</string>
    <string name="button_exit">Exit</string>
    <string name="button_grant">Grant</string>
    <string name="button_alert">Alert</string>

    <string name="google_maps_url">https://www.google.com/maps/search/?api=1&amp;query=</string>
    <string name="button_send">Send</string>
    <string name="existing_volunteer_message">Already added!</string>
    <string name="send_alert_title">Alert the volunteers?</string>
    <string name="send_alert_msg">An alert SMS will be sent to all the volunteers.</string>
    <string name="display_over_other_apps">Display over other apps</string>
    <string name="display_over_other_apps_description">In order to show the dialog for sending alert, from anywhere within you phone, the app requires access to the Display over other apps permission.</string>
    <string name="accessibility_service">Accessibility Service</string>
    <string name="accessibility_service_description">An accessibility service named \"Instant Alert\" needs to be running to instantly send alert on long pressing the Volume Up button. </string>
    <string name="button_start_service">Start service</string>
    <string name="button_grant_access">Grant access</string>
    <string name="special_permissions">Special permissions</string>
    <string name="started">Started</string>
    <string name="granted">Granted</string>
    <string name="item_save">Save</string>
    <string name="required">Required</string>
    <string name="pick_from_contacts">Pick from contacts</string>
    <string name="country_code">+91</string>

    <string name="item_remove_all">Remove all</string>

    <string name="button_remove">Remove</string>
    <string name="msg_remove_volunteers">Remove all volunteers?</string>

    <string name="channel_alerts_name">Alerts</string>
    <string name="pref_instant_alert">instant_alert</string>
    <string name="pref_fresh_app">fresh_app</string>

</resources>
