<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.RequestPermissionsActivity">

        <TextView
            android:id="@+id/request_permissions_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_padding"
            android:layout_marginStart="@dimen/global_padding"
            android:layout_marginEnd="@dimen/global_padding"
            android:text="@string/request_permissions_message"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/phone"
            android:textAppearance="@style/PermissionTitle"
            app:layout_constraintStart_toStartOf="@+id/request_permissions_message"
            app:layout_constraintTop_toBottomOf="@+id/request_permissions_message" />

        <TextView
            android:id="@+id/phone_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_info"
            app:layout_constraintStart_toStartOf="@+id/request_permissions_message"
            app:layout_constraintEnd_toEndOf="@id/request_permissions_message"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_padding"
            android:text="@string/sms"
            android:textAppearance="@style/PermissionTitle"
            app:layout_constraintStart_toStartOf="@+id/request_permissions_message"
            app:layout_constraintTop_toBottomOf="@+id/phone_info" />

        <TextView
            android:id="@+id/sms_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sms"
            app:layout_constraintStart_toStartOf="@id/request_permissions_message"
            app:layout_constraintEnd_toEndOf="@id/request_permissions_message"
            android:text="@string/sms_info" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_padding"
            android:text="@string/location"
            android:textAppearance="@style/PermissionTitle"
            app:layout_constraintStart_toStartOf="@+id/sms_info"
            app:layout_constraintTop_toBottomOf="@+id/sms_info" />

        <TextView
            android:id="@+id/location_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintStart_toStartOf="@id/request_permissions_message"
            app:layout_constraintEnd_toEndOf="@id/request_permissions_message"
            android:text="@string/location_info" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/global_padding"
            android:text="@string/button_exit"
            android:onClick="onExitClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/request_permissions_message" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_grant"
            android:onClick="onGrantClick"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/request_permissions_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>