<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.lina.securify.views.auth.VerifyPhoneFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include android:id="@+id/progress_bar"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            layout="@layout/progress_bar" />

        <TextView
            android:id="@+id/textView"
            style="@style/SignInTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_number"
            android:layout_marginTop="@dimen/auth_padding"
            android:layout_marginStart="@dimen/auth_padding"
            android:layout_marginEnd="@dimen/auth_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_title_bottom_padding"
            android:hint="@string/hint_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_verify"
            android:layout_marginBottom="@dimen/auth_padding"
            android:onClick="@{fragment::onVerifyClick}"
            app:layout_constraintEnd_toEndOf="@id/textView"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>