<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.lina.securify.viewmodels.EmailViewModel" />
        <variable
            name="fragment"
            type="com.lina.securify.views.fragments.EmailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.EmailFragment">

        <include
            android:id="@+id/progress_bar"
            android:visibility="@{viewModel.progressVisibility}"
            layout="@layout/progress_bar" />

        <TextView
            android:id="@+id/text_enter_email"
            android:text="@string/enter_your_email"
            android:layout_marginTop="@dimen/auth_padding"
            android:layout_marginStart="@dimen/auth_padding"
            android:layout_marginEnd="@dimen/auth_padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/SignInTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_title_bottom_padding"
            android:hint="@string/hint_email"
            app:layout_constraintEnd_toEndOf="@+id/text_enter_email"
            app:layout_constraintStart_toStartOf="@id/text_enter_email"
            app:layout_constraintTop_toBottomOf="@id/text_enter_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.model.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isButtonEnabled}"
            android:onClick="@{fragment::onContinueClick}"
            android:text="@string/button_continue"
            android:layout_marginBottom="@dimen/auth_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

